--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hxzard</title>
     <link rel="shortcut icon" href="Assets/Images/eye.svg" type="image/x-icon" />
+    <!-- Import font from Fontshare -->
     <link href="https://api.fontshare.com/v2/css?f[]=general-sans@1&display=swap" rel="stylesheet" />
+    <!-- Import Font Awesome icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" />
     <link rel="stylesheet" href="Assets/css/style.css" />
   </head>
@@ -14,6 +16,7 @@
     <div class="alerts"></div>
     <div class="wrapper">
       <div class="double-helix">
+        <!-- Four pairs of dots representing a double helix -->
         <div class="couple">
           <div class="dot"></div>
           <div class="dot"></div>
@@ -37,31 +40,33 @@
       <h1 class="name">Hxzard</h1>
       <p class="about">I hate trading and coding<br />I'm <span class="age"></span> years old</p>
       <div class="socials">
-        <a social="discord" data="hxzard#0001" onclick="copy('hxzard#0001')">
+        <!-- Discord username and ID -->
+        <a social="discord" data="Hxzard#0001" onclick="copy('Hxzard#0001')">
           <i class="fab fa-discord"></i>
           <p>Discord</p>
         </a>
+        <!-- SOL -->
         <a social="wallets" data="FMtBVsCgYyZhjjReRXZgwzESTAqbr67kEXuEbpCdqLsF" onclick="copy('FMtBVsCgYyZhjjReRXZgwzESTAqbr67kEXuEbpCdqLsF')">
           <i class="fas fa-coins"></i>
-          <p>SOL (Phantom)</p>
+          <p>SOL</p>
         </a>
+        <!-- ETH wallet address (Metamask) -->
         <a social="wallets" data="0x8Cc4dF16eCCAD1583Aed3a8CC9d8EbF23E94ccc2" onclick="copy('0x8Cc4dF16eCCAD1583Aed3a8CC9d8EbF23E94ccc2')">
           <i class="fab fa-ethereum"></i>
-          <p>ETH (Metamask)</p>
+          <p>ETH/BNB/POLYGON</p>
         </a>
+        <!-- LTC wallet address (Kucoin) -->
         <a social="wallets" data="MBG2YxwEzVvESDffpjr7x1CJxqytAeqJEg" onclick="copy('MBG2YxwEzVvESDffpjr7x1CJxqytAeqJEg')">
           <i class="fas fa-litecoin-sign"></i>
-          <p>LTC (Kucoin)</p>
+          <p>LTC</p>
         </a>
-        <a social="wallets" data="EXZLcM1q6uvLZGWHnqfMNqKNwnttWQssShTZnnUZkujj Please send SOLANA only to this address" onclick="copy('EXZLcM1q6uvLZGWHnqfMNqKNwnttWQssShTZnnUZkujj')">
-          <i class="fas fa-coins"></i>
-          <p>SOL (Kucoin)</p>
-        </a>
+        <!-- USDT TRC20 -->
         <a social="wallets" data="TNApGDu25Sd9u87195Mce1EP9a53hnshMF" onclick="copy('TNApGDu25Sd9u87195Mce1EP9a53hnshMF')">
           <i class="fas fa-dollar-sign"></i>
-          <p>USDT TRC20 (Kucoin)</p>
+          <p>USDT TRC20</p>
         </a>
       </div>
+    </div>
     <script src="Assets/js/main.js"></script>
   </body>
 </html>
