--- a/index.html
+++ b/index.html
@@ -45,22 +45,22 @@
           <i class="fab fa-discord"></i>
           <p>Discord</p>
         </a>
-        <!-- SOL -->
+        <!-- SOL wallet address (Metamask) -->
         <a social="wallets" data="FMtBVsCgYyZhjjReRXZgwzESTAqbr67kEXuEbpCdqLsF" onclick="copy('FMtBVsCgYyZhjjReRXZgwzESTAqbr67kEXuEbpCdqLsF')">
           <i class="fas fa-coins"></i>
           <p>SOL</p>
         </a>
-        <!-- ETH wallet address (Metamask) -->
+        <!-- ETH/BNB/MATIC wallet address (Metamask) -->
         <a social="wallets" data="0x8Cc4dF16eCCAD1583Aed3a8CC9d8EbF23E94ccc2" onclick="copy('0x8Cc4dF16eCCAD1583Aed3a8CC9d8EbF23E94ccc2')">
           <i class="fab fa-ethereum"></i>
-          <p>ETH/BNB/POLYGON</p>
+          <p>ETH/BNB/MATIC</p>
         </a>
         <!-- LTC wallet address (Kucoin) -->
         <a social="wallets" data="MBG2YxwEzVvESDffpjr7x1CJxqytAeqJEg" onclick="copy('MBG2YxwEzVvESDffpjr7x1CJxqytAeqJEg')">
           <i class="fas fa-litecoin-sign"></i>
           <p>LTC</p>
         </a>
-        <!-- USDT TRC20 -->
+        <!-- USDT TRC20 wallet address (Kucoin) -->
         <a social="wallets" data="TNApGDu25Sd9u87195Mce1EP9a53hnshMF" onclick="copy('TNApGDu25Sd9u87195Mce1EP9a53hnshMF')">
           <i class="fas fa-dollar-sign"></i>
           <p>USDT TRC20</p>
