--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="alerts"></div>
     <div class="wrapper">
       <div class="double-helix">
-        <!-- Four pairs of dots representing a double helix -->
+        <!-- Double Helix -->
         <div class="couple">
           <div class="dot"></div>
           <div class="dot"></div>
@@ -45,13 +45,13 @@
           <i class="fab fa-discord"></i>
           <p>Discord</p>
         </a>
-        <!-- SOL wallet address (Metamask) -->
+        <!-- SOL wallet address (Phantom) -->
         <a social="wallets" data="FMtBVsCgYyZhjjReRXZgwzESTAqbr67kEXuEbpCdqLsF" onclick="copy('FMtBVsCgYyZhjjReRXZgwzESTAqbr67kEXuEbpCdqLsF')">
           <i class="fas fa-coins"></i>
           <p>SOL</p>
         </a>
         <!-- ETH/BNB/MATIC wallet address (Metamask) -->
-        <a social="wallets" data="0x8Cc4dF16eCCAD1583Aed3a8CC9d8EbF23E94ccc2" onclick="copy('0x8Cc4dF16eCCAD1583Aed3a8CC9d8EbF23E94ccc2')">
+        <a social="wallets" data="0x69420DB84566Ff2973746b02e3cE03E428468CF8" onclick="copy('0x69420DB84566Ff2973746b02e3cE03E428468CF8')">
           <i class="fab fa-ethereum"></i>
           <p>ETH/BNB/MATIC</p>
         </a>
