--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
       </div>
       <h1 class="name">Hxzard</h1>
       <p class="about">I hate trading and coding<br />I'm <span class="age"></span> years old</p>
+      <p class="Donate"></p>
       <div class="socials">
         <!-- Discord username and ID -->
         <a social="discord" data="Hxzard#0001" onclick="copy('Hxzard#0001')">
