--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hxzard</title>
     <link rel="shortcut icon" href="Assets/Images/eye.svg" type="image/x-icon" />
@@ -35,7 +36,7 @@
         </div>
       </div>
       <div class="icon-container">
-        <img src="Assets/Images/pfp.jpg" alt="Profile Picture" />
+            <img src="https://api.lanyard.rest/930055165480951809.png">
       </div>
       <h1 class="name">Hxzard</h1>
       <p class="about">I hate trading and coding<br />I'm <span class="age"></span> years old</p>
