--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@
           <i class="fas fa-dollar-sign"></i>
           <p>USDT TRC20</p>
         </a>
+        <!-- Contact form -->
+        <a href="https://www.mywebsite.com/contact">
+          <i class="far fa-envelope"></i>
+          <p>Contact</p>
+        </a>
       </div>
     </div>
     <script src="Assets/js/main.js"></script>
