--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <p>USDT TRC20</p>
         </a>
         <!-- Contact form -->
-        <a href="https://www.mywebsite.com/contact">
+        <a href="https://www.hxzard.com/contact">
           <i class="far fa-envelope"></i>
           <p>Contact</p>
         </a>
