--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
         <img src="https://api.lanyard.rest/930055165480951809.png" />
       </div>
       <h1 class="name">Contact</h1>
-      <p class="ree-spam"></p>
+      <p class="ree_spam"></p>
 
       <form class="contact-form" action="submit-form.php" method="post">
         <div class="form-group">
