--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
           <p>USDT TRC20</p>
         </a>
         <!-- Contact form -->
-        <a href="https://www.hxzard.com/contact">
+        <a href="https://www.hxzard.com/contact" class="contact-link">
           <i class="far fa-envelope"></i>
-          <p>Contact</p>
+          <p>Contact Us</p>
         </a>
       </div>
     </div>
