--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <!-- Contact form -->
         <a href="https://www.hxzard.com/contact" class="contact-link">
           <i class="far fa-envelope"></i>
-          <p>Contact Us</p>
+          <p>Contact</p>
         </a>
       </div>
     </div>
