--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
       <h1 class="name">Contact</h1>
       <p class="ree_spam"></p>
 
-      <form class="contact-form" action="submit-form.php" method="post">
+      <form action="https://submit-form.com/o5RWpsSO">
         <div class="form-group">
           <label for="name">Name:</label>
           <input type="text" id="name" name="name" placeholder="Your name" required>
@@ -45,11 +45,6 @@
         <div class="form-group">
           <label for="email">Email:</label>
           <input type="email" id="email" name="email" placeholder="Your email address" required>
-        </div>
-
-        <div class="form-group">
-          <label for="subject">Subject:</label>
-          <input type="text" id="subject" name="subject" placeholder="Subject" required>
         </div>
 
         <div class="form-group">
