--- a/index.html
+++ b/index.html
@@ -43,27 +43,27 @@
       <p class="ree"></p>
       <div class="socials">
         <!-- Discord username and ID -->
-        <a social="discord" data="Hxzard#0001" onclick="copy('Hxzard#0001')">
+        <a social="discord" data="Hxzard#0001" onclick="copy(event, 'Hxzard#0001')">
           <i class="fab fa-discord"></i>
           <p>Discord</p>
         </a>
         <!-- SOL wallet address (Phantom) -->
-        <a social="wallets" data="FMtBVsCgYyZhjjReRXZgwzESTAqbr67kEXuEbpCdqLsF" onclick="copy('FMtBVsCgYyZhjjReRXZgwzESTAqbr67kEXuEbpCdqLsF')">
+        <a social="wallets" data="FMtBVsCgYyZhjjReRXZgwzESTAqbr67kEXuEbpCdqLsF" onclick="copy(event, 'FMtBVsCgYyZhjjReRXZgwzESTAqbr67kEXuEbpCdqLsF')">
           <i class="fas fa-coins"></i>
           <p>SOL</p>
         </a>
         <!-- ETH/BNB/MATIC wallet address (Metamask) -->
-        <a social="wallets" data="0x69420DB84566Ff2973746b02e3cE03E428468CF8" onclick="copy('0x69420DB84566Ff2973746b02e3cE03E428468CF8')">
+        <a social="wallets" data="0x69420DB84566Ff2973746b02e3cE03E428468CF8" onclick="copy(event, '0x69420DB84566Ff2973746b02e3cE03E428468CF8')">
           <i class="fab fa-ethereum"></i>
           <p>ETH/BNB/MATIC</p>
         </a>
         <!-- LTC wallet address (Kucoin) -->
-        <a social="wallets" data="MBG2YxwEzVvESDffpjr7x1CJxqytAeqJEg" onclick="copy('MBG2YxwEzVvESDffpjr7x1CJxqytAeqJEg')">
+        <a social="wallets" data="MBG2YxwEzVvESDffpjr7x1CJxqytAeqJEg" onclick="copy(event, 'MBG2YxwEzVvESDffpjr7x1CJxqytAeqJEg')">
           <i class="fas fa-litecoin-sign"></i>
           <p>LTC</p>
         </a>
         <!-- USDT TRC20 wallet address (Kucoin) -->
-        <a social="wallets" data="TNApGDu25Sd9u87195Mce1EP9a53hnshMF" onclick="copy('TNApGDu25Sd9u87195Mce1EP9a53hnshMF')">
+        <a social="wallets" data="TNApGDu25Sd9u87195Mce1EP9a53hnshMF" onclick="copy(event, 'TNApGDu25Sd9u87195Mce1EP9a53hnshMF')">
           <i class="fas fa-dollar-sign"></i>
           <p>USDT TRC20</p>
         </a>
