--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </div>
       <h1 class="name">Hxzard</h1>
       <p class="about">I hate trading and coding<br />I'm <span class="age"></span> years old</p>
-      <p class="ree"></p>
+      <p class="ree">Donate or 🔪</p>
       <div class="socials">
         <!-- Discord username and ID -->
         <a social="discord" onclick="fx(this); copy(this, 'Hxzard#0001')">
