--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
         <img src="https://api.lanyard.rest/930055165480951809.png" />
       </div>
       <h1 class="name">Contact</h1>
-      <p class="ree_spam">Don't you dare to spam this!"</p>
+      <p class="ree_spam"></p>
 
       <form action="https://submit-form.com/o5RWpsSO">
         <div class="form-group">
