--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
       </div>
       <h1 class="name">Contact</h1>
       <p class="ree_spam">Don't you dare spam this or else</p>
-
+      </div>
       <form action="https://submit-form.com/o5RWpsSO">
         <div class="form-group">
           <label for="name">Name:</label>
