--- a/contact.html
+++ b/contact.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Set character encoding and compatibility -->
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- Set viewport for mobile devices -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Set page title -->
     <title>Contact</title>
+    <!-- Import custom CSS stylesheet -->
     <link rel="stylesheet" href="Assets/css/style.css" />
   </head>
 
   <body>
+    <!-- Display alerts -->
     <div class="alerts"></div>
     <div class="wrapper">
+      <!-- Display double helix animation -->
       <div class="double-helix">
-        <!-- Double Helix -->
+        <!-- Double helix strand -->
         <div class="couple">
           <div class="dot"></div>
           <div class="dot"></div>
@@ -30,31 +36,31 @@
           <div class="dot"></div>
         </div>
       </div>
+      <!-- Display icon container with image -->
       <div class="icon-container">
         <img src="https://api.lanyard.rest/930055165480951809.png" />
       </div>
+      <!-- Display page title and warning -->
       <h1 class="name">Contact</h1>
       <p class="ree_spam">Don't you dare spam this or else</p>
+    </div>
+    <!-- Display contact form -->
+    <form action="https://submit-form.com/o5RWpsSO">
+      <div class="form-group">
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" placeholder="Your name" required>
       </div>
-      <form action="https://submit-form.com/o5RWpsSO">
-        <div class="form-group">
-          <label for="name">Name:</label>
-          <input type="text" id="name" name="name" placeholder="Your name" required>
-        </div>
-
-        <div class="form-group">
-          <label for="email">Email:</label>
-          <input type="email" id="email" name="email" placeholder="Your email address" required>
-        </div>
-
-        <div class="form-group">
-          <label for="message">Message:</label>
-          <textarea id="message" name="message" placeholder="Your message" required></textarea>
-        </div>
-
-        <button type="submit" class="btn">Send Message</button>
-      </form>
-      
+      <div class="form-group">
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" placeholder="Your email address" required>
+      </div>
+      <div class="form-group">
+        <label for="message">Message:</label>
+        <textarea id="message" name="message" placeholder="Your message" required></textarea>
+      </div>
+      <button type="submit" class="btn">Send Message</button>
+    </form>
+    <!-- Import custom JavaScript file -->
     <script src="Assets/js/main.js"></script>
   </body>
 </html>
