--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <!-- Display page title and description -->
       <h1 class="name">Hxzard</h1>
       <p class="about">I hate trading and coding<br />I'm <span class="age"></span> years old</p>
-      <p class="ree">Donate or 🔪</p>
+      <p class="ree"></p>
       <!-- Display social links with icons and wallet addresses -->
       <div class="socials">
         <!-- Discord username and ID -->
