--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
       </div>
       <!-- Display page title and warning -->
       <h1 class="name">Contact</h1>
-      <p class="ree_spam">Don't you dare spam this or else</p>
+      <p class="ree_spam"></p>
       <!-- Display contact form -->
       <form action="https://submit-form.com/o5RWpsSO">
         <div class="form-group">
